feat: se agrega errorResponse y application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=sentimentApi
+
+//Configuración del servidor:
+server.port=8080
+login.level.com.example.demo=INFO
+
+//Base de datos postgres-dbeaver:
+spring.datasource.url=jdbc:postgresql://localhost:5432/sentimentApi
+spring.datasource.username=postgres
+spring.datasource.password=Pos@26sql
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+//Para persistencia Java API y crear tablas automaticamente:
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+//Configuración de Docker:
+spring.docker.compose.enabled=false
+
+#Configuración de SpringDoc OpenApi
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.show-actuator=false
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
+springdoc.model-and-view-allowed=false
