--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -48,3 +48,7 @@ Thumbs.db
 #Temporary
 *.tmp
 *.swp
+
+src/main/resources/application.properties
+src/main/resources/application-dev.properties
+src/main/resources/application-prod.properties
